--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             position: fixed;
             bottom:1em;
             left:0;
+            z-index: 10;
             /* margin-inline:1em; */
             box-sizing: border-box;
             font-weight: bold;
